# web_scrappers

./: README.md  forbes_beautifulsoup.py  forbes_selenium.py  pyproject.toml
