[tool.poetry]
name = "web-scrappers"
version = "0.1.0"
description = ""
authors = ["orache arthur <arthur.orache@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
selenium = "^4.16.0"
beautifulsoup4 = "^4.12.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
